# Automatic-License-Plate-Detection

./: Dockerfile  LICENSE  README.md  train_yolov8.ipynb
app/: config.py  main.py  pyproject.toml  requirements.txt
app/routes/: detection_route.py
app/utils/: handler_data.py  handler_detection.py  log_config.py
