[project]
name = "license-plate-detection"
version = "0.1.0"
authors = ["Vishnu V S"]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "python-multipart",
    "paddlepaddle",
    "paddleocr",
    "python-dotenv",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "ultralytics",
    "easyocr",
    "opencv-python-headless",
    "pandas",
    "pydantic",
    "loguru",
    "pillow",
]

[tool.pip.extra-index-urls]
pytorch = "https://download.pytorch.org/whl/cpu"

[tool.pip.dependencies]
torch = {version = "*", index = "pytorch"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
